Fix mobile overflow white space

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@
   padding: 0;
 }
 
+html, body, #root {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
 }
